# mpack-cpp

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  mpack_cpp.cpp  test_mpack_cpp.cpp
.github/workflows/: pre-commit-check.yml
demos/: function_stack.cpp  node_api.cpp
include/mpack_cpp/: mpack_expect_reader.hpp  mpack_macros.hpp  mpack_reader.hpp  mpack_writer.hpp
tests/: test_custom_allocator.cpp  test_expect_reader.cpp  test_ext_type.cpp  test_mpack_cpp.cpp  test_nested_struct.cpp  test_optional.cpp
